<resources>
    <string name="app_name">FlightSight</string>
    <string name="title_activity_flight_route">Flight Route</string>

    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="create">Create</string>
    <string name="please_pick">Please pick origin and destination point</string>
    <string name="startTime">Start time:</string>
    <string name="finishTime">Finish time:</string>
    <string name="distance">Distance:</string>

    <string name="start_time">Start time:</string>
    <string name="finish_time">Finish time:</string>

    <string name="places_loaded">Places loaded %d</string>
</resources>
