<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_medium"
    app:cardCornerRadius="@dimen/cardview_route_corner"
    app:cardBackgroundColor="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_tiny"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_tiny"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/from"
                android:textColor="@color/colorCardTextSpecial"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="Tratatatat"
                android:textColor="@color/colorCardText"
                android:layout_marginLeft="@dimen/cardview_route_margin_left"
                android:id="@+id/card_textfield_from"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_tiny"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/to"
                android:textStyle="bold"
                android:textColor="@color/colorCardTextSpecial"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="Tratatatat"
                android:id="@+id/card_textfield_to"
                android:layout_marginLeft="@dimen/cardview_route_margin_left"
                android:textColor="@color/colorCardText"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_tiny"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/startTime"
                android:textStyle="bold"
                android:textColor="@color/colorCardTextSpecial"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="12:34"
                android:id="@+id/card_textfield_start_time"
                android:textColor="@color/colorCardText"
                android:layout_marginLeft="@dimen/cardview_route_margin_left"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_tiny"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/startTime"
                android:textStyle="bold"
                android:textColor="@color/colorCardTextSpecial"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="14:32"
                android:id="@+id/card_textfield_finish_time"
                android:textColor="@color/colorCardText"
                android:layout_marginLeft="@dimen/cardview_route_margin_left"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_tiny"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/distance"
                android:textStyle="bold"
                android:textColor="@color/colorCardTextSpecial"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="14:32"
                android:id="@+id/card_textfield_distance"
                android:textColor="@color/colorCardText"
                android:layout_marginLeft="@dimen/cardview_route_margin_left"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>